# ashos

./: .gitignore  Cargo.toml  README.md  README_CZ.md  astpk.py  build.rs  git.txt  logo.txt  main.py  setup.py  ua.sh  update.py
res/docs/: README_CZ.md  README_FA.md  README_zh-CN.md
res/logos/: logo.txt
res/logos/ascii/: logo_w40.txt  logo_w50.txt  logo_w60.txt  logo_w64.txt  logo_w70.txt  logo_w80.txt
src/: ashpk_core.py  btrfs.rs  cli.rs  detect_distro.rs  detect_os.py  detect_os.sh  grub.rs  installer_core.py  installer_core_Z.py  lib.rs  main.rs  rollback.py  tree.rs  update.py
src/ashpk/: apt.rs  dnf.rs  mod.rs  pacman.rs
src/ashpk/pacman/: ashpk.rs
src/distros/: _empty.py  mod.rs
src/distros/alpine/: ashpk.py  installer.py  repositories
src/distros/arch/: ashpk.py  ashpk.rs  installer.py
src/distros/cachyos/: ashpk.py  installer.py
src/distros/debian/: ashpk.py  installer.py
src/distros/endeavouros/: ashpk.py  installer.py
src/distros/fedora/: ashpk.py  base.repo  installer.py
src/distros/kicksecure/: ashpk.py  installer.py  (+1 more)
src/distros_pkg_manager/: arch_pkg.rs  mod.rs
src/documents/: ashos-diagram-drawio.xml  ven-drawio.xml
src/include/: a.out  cmd.h  ctree.c  ctree.h  example.c  example2.c  list.c  vectors.c  vectors.h
src/prep/: alpine_live.sh  arch_live.sh  cachyos_live.sh  debian_live.sh  detect_os.sh  endeavouros_live.sh  env_path.sh  env_path.txt  fedora_live.sh  freebsd_live.sh  grub_luks2.conf  kicksecure_live.sh  manjaro_live.sh  parted_gpt_example.sh  parted_gpt_lvm.sh  parted_gpt_stratis.sh  parted_mbr_example.sh  pop_live.sh  rhel_live.sh  ubuntu_live.sh
src/src/: ashpk_core.py
(+211 files in other folders)
