[package]
name = "ashos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ash"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
clap = "4.1.8"
cpython = "0.7"
csv = "1.2.2"
nix = "0.26.2"
time = {version = "0.3.22", features = ["formatting", "local-offset", "macros"]}
