[package]
name = "ashos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ash"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[features]
default = ["arch"]
arch = []

[dependencies]
clap = "4.1.8"
cpython = "0.7"
csv = "1.2.2"
libbtrfsutil = "0.5.2"
mktemp = "0.5.0"
nix = "0.26.2"
ofiles = "0.2.0"
partition-identity = "0.3.0"
proc-mounts = "0.3.0"
time = {version = "0.3.22", features = ["formatting", "local-offset", "macros"]}
walkdir = "2.3.3"
