[package]
name = "ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[features]
default = ["arch"]
arch = []
debian = []

[dependencies]
cfg-if = "1.0.0"
chrono = "0.4.31"
clap = "4.1.8"
configparser = "3.0.2"
cpython = "0.7"
csv = "1.2.2"
curl = "0.4.44"
libbtrfsutil = "0.5.2"
nix = "0.26.2"
partition-identity = "0.3.0"
proc-mounts = "0.3.0"
rustix = "0.38.8"
tempfile = "3.8.0"
users = "0.11.0"
walkdir = "2.3.3"
